--- a/src/styles/molecule/_message.scss
+++ b/src/styles/molecule/_message.scss
@@ -21,7 +21,7 @@
     </div>
 
   script:
-  
+
 ––––
 */
 
@@ -64,7 +64,7 @@
       top:20px;
       left:20px;
     }
-    p, h1,h2,h3,h4,h5,h6 {
+    p, h4,h5,h6 {
       margin-left:50px;
     }
   }
