--- a/src/styles/atom/_checkbox.scss
+++ b/src/styles/atom/_checkbox.scss
@@ -66,6 +66,7 @@
 			left: 0;
 			border-radius: 3px;
 			border:1px solid color("grey", "lighten-2");
+			background-color: white;
 			cursor:pointer;
 			box-shadow: 1px 1px 1px #efefef inset;
 		}
