--- a/src/styles/template/apl-simulator/_home.scss
+++ b/src/styles/template/apl-simulator/_home.scss
@@ -25,12 +25,21 @@
 	overflow:hidden;
 }
 
-section.background {
+section.background, section.semi-background {
 	width: 100%;
 	background-color: darken(#8DB2C8, 10%);
 	position:relative;
 	padding: 75px 0;
 	min-height: 500px;
+	&.semi-background {
+		height: auto;
+		min-height: 108px;
+		padding: 50px;
+		h1,h2,h3,h4,h5,h5 {
+			font-weight: 800!important;
+			color: white!important;
+		}
+	}
 	overflow: visible;
 	background: #02AAB0; /* fallback for old browsers */
 	background: linear-gradient(to left, #02AAB0 , #7092c5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -49,6 +58,16 @@ section.background {
 	h3 {
 		margin-top: 110px;
 		margin-bottom: 60px;
+	}
+	.main-texture {
+		position: absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+		background-size: cover;
+		background-image: url('../assets/imgs/svg/background.svg');
+		opacity: 0.05;
 	}
   .gradient {
         background-image: linear-gradient(-135deg, rgba(209, 38, 49, 0.9), rgba(22, 0, 102, 0.9)) !important;
@@ -84,6 +103,8 @@ section.background {
 }
 
 .args .row {
+	width: 100%;
+	display: inline-block;
 	.four.col:first-child, .four.col:last-of-type {
 		margin-top:$text-size;
 	}
@@ -96,8 +117,11 @@ section.background {
 	height: 150px;
 	opacity:0.7;
 	transition: all 200ms ease;
-	background-size: cover;
 	margin-bottom: $text-size;
+	background-size: 97%;
+	margin-bottom: 1.5rem;
+	background-position-x: 2%;
+	background-repeat: no-repeat;
 	&:hover {
 		opacity:1;
 	}
