--- a/src/css/template/doc/_color.scss
+++ b/src/css/template/doc/_color.scss
@@ -5,6 +5,12 @@ $hoverTimeOut: 300ms;
 $hoverEaseIn: ease-out;
 $hoverEaseOut: ease-in;
 
+#color-grey >div {
+	margin-top: 7rem;
+	margin-left:0;
+	padding-right: 7rem;
+	width: 100%;
+}
 
 .culture-wrapper {
 	padding: 0 20px;
