--- a/src/css/template/_nav.scss
+++ b/src/css/template/_nav.scss
@@ -1,123 +1,76 @@
-#doc>header {
-	width:45px;
-	position:fixed;
-	height:100%;
-	top:0;
-	z-index: 999999;
-	border-right: 1px solid color("grey", "lighten-3");
-	.pattern {
-		width: 100%;
-		height:100%;
-		position:absolute;
-		top:0;
-		left:0;
-		opacity:0.4;
+#cookie {
+	position:absolute;
+	z-index: 997;
+	top:60px;
+	width: 100%;
+	background-color: rgba(0,0,0,0.03);
+	color:white;
+	p {
+		color:white;
+		margin:0;
+		padding:10px 0;
+		font-size: 0.9em;
 	}
-	h1,h2,h3,h4,h5,h6 {
-		position:absolute;
-		transform:rotate(-90deg);
-		transform-origin: 100% 0;
-		text-transform: uppercase;
-    bottom: 190px;
-    font-size: 2rem;
-    right: 33px;
-    padding: 2px;
-    margin: 0;
-    line-height: 1;
-    letter-spacing: 0.1rem;
-		color: color("primary", "darken-2");
-    background-color: white;
+	i {
+		margin-top:10px;
+		cursor:pointer;
+		opacity:0.5;
+		&:hover {
+			opacity:1;
+		}
+	}
+	a {
+		color:color("complement", "lighten-2");
 	}
 }
 
-#doc .nav {
-	width: 250px;
-	position: fixed;
-	height: 100%;
-	top: 0;
-	left:45px;
-	z-index: 999999;
-	border-right: 1px solid color("grey", "lighten-3");
-	padding-top: 63px;
-	overflow: hidden;
-	#logo {
-		width:40px;
-		height:40px;
-		margin-bottom: 60px;
-    margin-left: 103px;
-    margin-top: 64px;
-		border-radius:100%;
-		&:after {
-			content:"";
+#logo {
+	width: 31px;
+	height: 31px;
+	//background-image: url('../assets/imgs/svg/logo.svg');
+	transition: all 200ms ease;
+	opacity:0.8;
+	margin-top:5px;
+	margin-top: 15px;
+	margin-right: 10px;
+	&:hover {
+		opacity:1;
+	}
+}
+
+#nav {
+	height: 60px;
+	width: 100%;
+	background-color: white;
+	position:fixed;
+	z-index: 998;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+	a {
+		text-decoration: none;
+		margin-top: 19px;
+		font-weight: 800;
+		color: color("grey", "darken-3");
+		opacity:0.8;
+		transition: all 200ms ease;
+
+		&:hover 	{ outline: 0; text-decoration: none; opacity:1; }
+		&:active 	{ outline: 0;}
+		&:visited 	{ color: color("grey", "darken-3"); }
+		&:focus	 	{ outline: 0;  }
+	}
+	a.pull-left + a.pull-left {
+		margin-left: 25px;
+	}
+	a.pull-left:not(#logo){
+		opacity:0.6;
+		&:hover {
+			opacity:1;
 		}
 	}
-	h5 {
-		text-transform: uppercase;
-		font-weight: 500;
-		letter-spacing: .2rem;
-		margin-bottom:0;
-		font-size: 1.5rem;
-		cursor:pointer;
-		user-select: none;
-		padding-left:60px;
-		position:relative;
-		a {
-			display:block;
-			padding: 1rem 0;
-			color: $title-color;
-			&:before {
-				position:absolute;
-				content:"";
-				width: 10px;
-				height:10px;
-				left: -15px;
-		    top: 15px;
-				border: 1px solid color("primary", "base");
-				transition: left 200ms ease;
-				transform: rotate(45deg);
-			}
-		}
-		&.active {
-			font-weight: 800;
-			a:before {
-				left:-7px;
-			}
-		}
+	a.active {
+		opacity:1!important;
 	}
-	>hr {
-		margin-top: $text-size /2;
-	}
-	ul {
-		margin-bottom:$text-size;
-		//accordion
-		display:none;
-		margin-top:0rem;
-		margin-bottom:1rem;
-		&.active {
-			display:block;
-		}
-	}
-	li {
-		margin:0;
-		border-left: 1px solid transparent;
-		transition: border-left 150ms linear;
-		padding-left:60px;
-		a {
-			font-family: $nav-font;
-			display:block;
-			margin:0;
-			margin-left:3px;
-			padding: 0px 0px 0px 10px;
-			position:relative;
-			transition: all 100ms ease;
-			user-select:none;
-			color: $text-color;
-		}
-		&.active {
-			border-left: 1px solid color("primary", "lighten-1");
-			a {
-				font-weight: 500;
-			}
-		}
+	a.pull-right {
+		margin-top: 15px;
 	}
 }
