--- a/src/css/_color.scss
+++ b/src/css/_color.scss
@@ -11,7 +11,7 @@
 	// complement($color-primary)
 
 	$color-primary:				#C57329;
-	$color-complement:		#be022e;
+	$color-complement:		#8c0222;
 
 	$color-blue:				  #98abbf;
 	$color-green:					#326550;
