--- a/src/templates/animation.jade
+++ b/src/templates/animation.jade
@@ -2,3 +2,71 @@ header#animation-head
   div
     h3 Animation
 section#animation.section
+  .bloc#animation-ease
+    h5 Easings
+    hr
+    br
+    div
+      .ease-wrapper
+        .ease-demo.ease-demo-swift-move
+          .grid-wrapper
+            .grid
+              .line
+              .line
+              .line
+              .vertical-line
+              .vertical-line
+              .vertical-line
+          .dot-wrapper
+            .dot.dot-square.dot-straight.dot-swift-move
+      .ease-wrapper
+        .ease-demo.ease-demo-swifter-move
+          .grid-wrapper
+            .grid
+              .line
+              .line
+              .line
+              .vertical-line
+              .vertical-line
+              .vertical-line
+          .dot-wrapper
+            .dot.dot-square.dot-straight.dot-swifter-move
+      .ease-wrapper
+        .ease-demo.ease-demo-heavy-move
+          .grid-wrapper
+            .grid
+              .line
+              .line
+              .line
+              .vertical-line
+              .vertical-line
+              .vertical-line
+          .dot-wrapper
+            .dot.dot-square.dot-straight.dot-heavy-move
+      .ease-wrapper
+        .ease-demo.ease-demo-swift-in
+          .grid-wrapper
+            .grid
+              .line
+              .line
+              .line
+              .vertical-line
+              .vertical-line
+              .vertical-line
+          .dot-wrapper
+            .dot.dot-square.dot-straight.dot-swift-in
+      .ease-wrapper
+        .ease-demo.ease-demo-swift-in-bouncy
+          .grid-wrapper
+            .grid
+              .line
+              .line
+              .line
+              .vertical-line
+              .vertical-line
+              .vertical-line
+          .dot-wrapper
+            .dot.dot-square.dot-straight.dot-swift-in-bouncy
+  br
+  br
+  br
