--- a/src/templates/color.jade
+++ b/src/templates/color.jade
@@ -38,7 +38,7 @@ section#color.section.color
       .column._bg-grey-darken-4
         .info
           h3.name._text-grey-contrast-darken-5 ColorName
-          h6._text-grey-contrast-darken-5 The words
+          h6._text-grey-contrast-darken-5 Grey
         .variation._text-grey-contrast-darken-5
           div
             span hex   
@@ -64,7 +64,7 @@ section#color.section.color
       .column._bg-primary
         .info
           h3.name._text-primary-contrast-darken-5 ColorName
-          h6._text-primary-contrast-darken-5 The identity
+          h6._text-primary-contrast-darken-5 Orange
         .variation._text-primary-contrast-darken-5
           div
             span hex   
@@ -90,7 +90,7 @@ section#color.section.color
       .column._bg-complement
         .info
           h3.name._text-complement-contrast-darken-5 ColorName
-          h6._text-complement-contrast-darken-5 The links
+          h6._text-complement-contrast-darken-5 Red
         .variation._text-complement-contrast-darken-5
           div
             span hex   
@@ -122,7 +122,7 @@ section#color.section.color
     br
     br
     .-last
-      .column._bg-blue-darken-2
+      .column._bg-blue
         .info
           h5.name._text-blue-contrast-darken-5 ColorName
           h6._text-blue-contrast-darken-5 Blue
@@ -143,19 +143,8 @@ section#color.section.color
           ._bg-green-darken-1
           ._bg-green-darken-2
           ._bg-green-darken-3
-          ._bg-green-darken-4 			
-      .column._bg-lightgreen
-        .info
-          h5.name._text-lightgreen-contrast-darken-5 ColorName
-          h6._text-lightgreen-contrast-darken-5 Lightgreen
-        .gradient
-          ._bg-lightgreen-lighten-1
-          ._bg-lightgreen
-          ._bg-lightgreen-darken-1
-          ._bg-lightgreen-darken-2
-          ._bg-lightgreen-darken-3
-          ._bg-lightgreen-darken-4
-      .column._bg-yellow-darken-2
+          ._bg-green-darken-4
+      .column._bg-yellow
         .info
           h5.name._text-yellow-contrast-darken-5 ColorName
           h6._text-yellow-contrast-darken-5 Yellow
@@ -168,7 +157,7 @@ section#color.section.color
           ._bg-yellow-darken-4
     br
     br
-    .-last
+    .-last.-only-two
       .column._bg-brown
         .info
           h5.name._text-brown-contrast-darken-5 ColorName
@@ -180,18 +169,7 @@ section#color.section.color
           ._bg-brown-darken-2
           ._bg-brown-darken-3
           ._bg-brown-darken-4
-      .column._bg-orange
-        .info
-          h5.name._text-orange-contrast-darken-5 ColorName
-          h6._text-orange-contrast-darken-5 Orange
-        .gradient
-          ._bg-orange-lighten-1
-          ._bg-orange
-          ._bg-orange-darken-1
-          ._bg-orange-darken-2
-          ._bg-orange-darken-3
-          ._bg-orange-darken-4 			
-      .column._bg-pink-darken-2
+      .column._bg-pink
         .info
           h5.name._text-pink-contrast-darken-5 ColorName
           h6._text-pink-contrast-darken-5 Pink
@@ -202,17 +180,6 @@ section#color.section.color
           ._bg-pink-darken-2
           ._bg-pink-darken-3
           ._bg-pink-darken-4
-      .column._bg-light-darken-2
-        .info
-          h5.name._text-light-contrast-darken-5 ColorName
-          h6._text-light-contrast-darken-5 Light
-        .gradient
-          ._bg-light-lighten-1
-          ._bg-light
-          ._bg-light-darken-1
-          ._bg-light-darken-2
-          ._bg-light-darken-3
-          ._bg-light-darken-4
     br
     br
 
