--- a/src/templates/nav.jade
+++ b/src/templates/nav.jade
@@ -24,7 +24,7 @@ nav.nav
       li
         a(href='#color-main') Main
       li
-        a(href='#color-semantic') Semantic
+        a(href='#color-semantic') Others
       li
         a(href='#color-grey') Greys
   #nav-animation.accordion(ui-sref-active="active")
