--- a/src/css/template/doc/_color.scss
+++ b/src/css/template/doc/_color.scss
@@ -159,7 +159,7 @@ $hoverEaseOut: ease-in;
 		min-height: 150px;
 		margin: 0 $text-size;
 		position: relative;
-		width: 25%;
+		width: 33%;
 
 		h5 {
 			margin-bottom: 0;
@@ -178,6 +178,9 @@ $hoverEaseOut: ease-in;
 				height: 150px;
 			}
 		}
+	}
+	&.-only-two .column {
+		width: 50%;
 	}
 }
 
